--- a/.env.production
+++ b/.env.production
@@ -3,4 +3,4 @@ ENV = 'production'
 
 # fx67ll/生产环境
 VUE_APP_ENV = 'production'
-VUE_APP_BASE_API = 'http://express.fx67ll.com'
+VUE_APP_BASE_API = 'https://node.fx67ll.com/express-api'
