--- a/package.json
+++ b/package.json
@@ -1,33 +1,48 @@
 {
-  "name": "NFPBV",
-  "version": "0.1.11",
-  "description": "fx67ll's Node.js Project",
-  "private": true,
-  "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build"
-  },
-  "dependencies": {
-    "axios": "^0.21.1",
-    "blueimp-md5": "^2.19.0",
-    "core-js": "^2.6.5",
-    "echarts": "^5.0.2",
-    "element-ui": "^2.14.1",
-    "fx67ll-vue-ui": "^0.2.22",
-    "js-cookie": "^2.2.1",
-    "less": "^3.12.2",
-    "less-loader": "^7.0.1",
-    "moment": "^2.28.0",
-    "normalize.css": "^8.0.1",
-    "style-resources-loader": "^1.3.3",
-    "underscore": "^1.11.0",
-    "vue": "^2.6.10",
-    "vue-router": "^3.4.3",
-    "vuex": "^3.5.1"
-  },
-  "devDependencies": {
-    "@vue/cli-plugin-babel": "^3.8.0",
-    "@vue/cli-service": "^3.8.0",
-    "vue-template-compiler": "^2.6.10"
-  }
+	"name": "NFPBV",
+	"version": "0.1.11",
+	"description": "fx67ll's Node.js Project",
+	"private": true,
+	"scripts": {
+		"serve": "vue-cli-service serve",
+		"build": "vue-cli-service build"
+	},
+	"dependencies": {
+		"axios": "^0.21.1",
+		"blueimp-md5": "^2.19.0",
+		"core-js": "^2.6.5",
+		"echarts": "^5.0.2",
+		"element-ui": "^2.14.1",
+		"fx67ll-vue-ui": "^0.2.22",
+		"js-cookie": "^2.2.1",
+		"less": "^3.12.2",
+		"less-loader": "^7.0.1",
+		"moment": "^2.28.0",
+		"normalize.css": "^8.0.1",
+		"style-resources-loader": "^1.3.3",
+		"underscore": "^1.11.0",
+		"vue": "^2.6.10",
+		"vue-router": "^3.4.3",
+		"vuex": "^3.5.1"
+	},
+	"devDependencies": {
+		"@vue/cli-plugin-babel": "^3.8.0",
+		"@vue/cli-service": "^3.8.0",
+		"vue-template-compiler": "^2.6.10"
+	},
+	"repository": {
+		"type": "git",
+		"url": "https://github.com/fx67ll/NFPBV"
+	},
+	"keywords": [
+		"fx67ll",
+		"fx67ll.com",
+		"node.fx67ll.com",
+		"node.js",
+		"express.js",
+		"mongoDB",
+		"mongoose"
+	],
+	"author": "fx67ll@github.com",
+	"license": "MIT"
 }
